...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ArtistActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/artistas"
        android:textColor="#555555"
        android:textSize="30sp"
        android:textStyle="bold"
...
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAlbums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="@string/albumestitle"
        tools:layout_editor_absoluteX="53dp"
...
