...
                app:cardPreventCornerOverlap="false"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="#000"
                >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/artists_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/cover_image"
...

            </androidx.cardview.widget.CardView>



            <TextView
                android:id="@+id/nameMusicianView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="Nombre del Artista"
                android:textColor="#31C5D2"
...
