<resources>
    <string name="app_name">Vinyls</string>
    <string name="cover_image">Image del Album</string>
    <string name="albumestitle">Álbumes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artistas">Artistas</string>
    <string name="colecciones">Coleccionistas</string>
    <string name="crear">Crear</string>
    <string name="crear_album">Crear Album</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="album">Álbum</string>
    <string name="wip">En Progreso</string>
    <string name="genero">Genero:</string>
    <string name="asociar_canci_n_al_lbum">Asociar Canción al Álbum</string>
    <string name="coleccionistas">Coleccionistas</string>
    <string name="volver">Volver</string>
    <string name="album_s">Albumés</string>
    <string name="t_tulo" />
    <string name="fecha" />
    <string name="cover_url_imagen" />
    <string name="descripci_n" />
    <string name="nombre" />
    <string name="artista">Artista</string>
</resources>