<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TrackCreateActivity"
    android:background="#F0F0F7"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Asociar Canción Álbum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="#555555"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/lblName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/corners"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/lblDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Duración"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <LinearLayout
        android:id="@+id/layoutDuration"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblDuration"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextHours"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="Horas"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/corners"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editTextMinutes"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="Minutos"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/corners"
            android:padding="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asociar_canci_n_al_lbum"
        app:layout_constraintTop_toBottomOf="@+id/layoutDuration"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/corners"
        />



</androidx.constraintlayout.widget.ConstraintLayout>