...
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"

        />

    <Button
        android:id="@+id/buttonSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ver Canciones"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="10dp"
...
